@@ -1,6 +1,10 @@
 
 Drupal 7.25, xxxx-xx-xx (development version)
 -----------------------
+- Fixed a bug which caused cached pages to sometimes be sent to the browser
+  with incorrect compression. The fix adds a new 'page_compressed' key to the
+  $cache->data array returned by drupal_page_get_cache() (minor data structure
+  change).
 - Fixed broken tests on PHP 5.5.
 - Made the File and Image modules more robust when saving entities that have
   deleted files attached. The code in file_field_presave() will now remove the
